# cyberchallenge

./: .gitattributes  README.md  comandi librerie codici.txt
acl/: acl.txt  ccit_AC.iso  cronjob e sudoer.txt  estrai iso.txt  refund.py
acl/lab-28-02/: acl.txt  lab-26-02.txt
acl/src/: authorize_payment.php  finalize_payment.php  index.php  new_account.php  refund_payment.php
cryptography/: aritmetica modulare.txt  ascii.py  base64conv.py  cifra.py  crib.py  decodebase64.py  decompress_zlib.py  discrete_log.py  equaz_bezout.py  hex.py  inverso.py  johntheripper.txt  log_baby_step.py  pycrypto1.py  pycrypto2.py  pycrypto3.py  resto_cinese.py  rsa_base.py  shift.py  xor_and_hex.py  xorr.py
cryptography/diffie helmann/: decript_df.py  isgenerator.py  public_df.py  safe_prime.py
cryptography/sfide cripto 01/: all keys are the same.enc  clock sfida password.txt  i_drop_the_key.py  key_same.py  keyops.txt  sort_tempi.py
cryptography/xor image/: image_numpy.py  spiega.txt
intro python/esercizi_prima_parte/: dati.txt  (+6 more)
network security/: comandi.txt
network security/lab network 20-2/compose_things_up/backend/: Dockerfile  pyproject.toml
network security/lab network 20-2/compose_things_up/backend/backend/: main.py
nintendo/: tryme.sav
osint/: osint.txt
software security/: esempi cifrature.txt
unife website/: COWsay.txt  cowsay2.txt  file manager 2000.py  oxfe.txt  refund_unife.py
web security/: WS_1.1 - HTTP Protocol and Web Security Overview.pptx  WS_1.2 - File Disclosure and Server-Side Request Forgery.pptx  WS_1.3 - Command and Code injections.pptx
(+308 files in other folders)
