[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mouaad Daki <daki97.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.scripts]
start = "backend.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
